--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,8 @@ body {
   position: relative;
   line-height: 1.6;
   -webkit-font-smoothing: antialised;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body input:focus:required:invalid,
