--- a/lifeinmobile_test/css/slider.css
+++ b/lifeinmobile_test/css/slider.css
@@ -1,5 +1,9 @@
+body {
+	position: relative;
+}
 .container {
 	max-width: 95%;
+	max-height: 650px;
 	position: relative;
 	margin: auto;
 }
@@ -10,7 +14,7 @@
 	width: auto;
 	margin-top: -22px;	
 	padding: 1px 16px;
-	color: #fff;
+	color: #333;
 	font-size: 60px;
 	transition: 0.6s ease;
 	border-radius: 0 5px 5px 0;
@@ -20,11 +24,14 @@
 	border-radius: 5px 0 0 5px;
 }
 .prev:hover, .next:hover {
-	background-color: rgba(0, 0, 0, 0.6);
-	color: #fff;
+	color: #888;
+}
+.slider {
+	text-align: center;
 }
 .slider img {
-	width: 100%;
+	max-width: 100%;
+	max-height: 650px;
 }
 .images {
 	text-align: center;
@@ -34,7 +41,7 @@
 	border: 1px solid #fff;
 	padding: 2px;
 	cursor: pointer;
-	margin: 0 5px;
+	margin: 0 3px;
 	transition: 0.6 ease;
 }
 .mini:hover {
