--- a/exit/css/slider.css
+++ b/exit/css/slider.css
@@ -2,10 +2,12 @@ body {
 	position: relative;
 }
 .container {
-	max-width: 95%;
+	max-width: 90%;
 	max-height: 800px;
+	min-width: 300px;
 	position: relative;
 	margin: auto;
+	margin-bottom: 20px;
 }
 .prev, .next {
 	cursor: pointer;
@@ -32,6 +34,7 @@ body {
 .slider img {
 	max-width: 100%;
 	max-height: 800px;
+	max-height: 300px;
 }
 .images {
 	text-align: center;
@@ -49,6 +52,7 @@ body {
 }
 .active, mini:hover {
 	border: 1px solid #50677F;
+	background-color: #888;
 }
 .fade {
 	-webkit-animation-name:fade;
